lib/src/compiler/tests/testdata/errors/23.out
error[E104]: unexpected negative number
 --> line:5:11
  |
5 |     $a at -1
  |           ^^ this number can not be negative
  |